web-infras/parser/tests/fixtures/esprima/ES6/template-literals/invalid-escape/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,1)
1|`\1`;
 |^
